--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_DB_URI='mongodb+srv://admin:gfy23333@cluster0-jbjx7.azure.mongodb.net/test?retryWrites=true&w=majority'
+MONGO_DB_URI='mongodb://localhost/cse135analytics'
