--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_DB_URI='mongodb://localhost/cse135analytics'
+MONGO_DB_URI="mongodb+srv://admin:CSE135jin@cluster0-jbjx7.azure.mongodb.net/cse135analytics?retryWrites=true&w=majority"
